# SlimCastin

./: CMakeLists.txt  LICENSE  README.md
src/: bmp2texture.cpp
src/examples/: DungeonCrawler.cpp  DungeonCrawler.cu  cobblestone2.texture  colored_stone.texture  purple_stone.texture  red_stone.texture  textures.h
src/slim - Copy/draw/: text.h
src/slim - Copy/math/: mat3.h  quat.h  vec3.h
src/slim - Copy/renderer/: render_data.h  renderer.h  renderer_GPU.h
src/slim - Copy/scene/: tilemap.h  tilemap_base.h
src/slim - Copy/viewport/: navigation.h
src/slim/core/: base.h  ray.h  texture.h
src/slim/draw/: line.h  text.h
src/slim/math/: vec2.h  vec3.h
src/slim/renderer/: pixel_shader.h  ray_caster.h  ray_tracer.h  render_data.h  renderer - Copy.h  renderer.h  renderer_GPU.h
src/slim/scene/: camera.h  material.h  tilemap.h  tilemap_base.h
src/slim/serialization/: texture.h
src/slim/viewport/: navigation.h
